@@ -2,6 +2,8 @@
 
 	* include/nsconfig.h.in: Remove autogenerated file.
 
+	* nsd/tcltime.c: Use simple pointer copying inplace of memcpy.
+
 2008-08-27  Vlad Seryakov <seryakov@users.sf.net>
 
         * nsdb/nsdb.h:
